Fix Z-index

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -59,5 +59,6 @@
     font-size: 15px;
     margin: 0;
     border-radius: 5px 5px 0px 0px;
+    z-index: -500;
   }
 }
