--- a/client/src/components/ChatAppV2/Loginpage.scss
+++ b/client/src/components/ChatAppV2/Loginpage.scss
@@ -1,26 +1,49 @@
-#layout {
+.App {
+  display: fixed !important;
+  z-index: -100 !important;
+  height: 0 !important;
+}
+
+// Containter {
+//   position: fixed;
+//   z-index: 500;
+// }
+
+// Form.Group {
+//   position: fixed;
+//   z-index: 500;
+// }
+// .form {
+//   position: fixed;
+//   z-index: 5000;
+// }
+
+// Form.control {
+//   position: fixed;
+// }
+
+#wrap_video {
+  position: fixed;
   width: 100%;
+  height: 500px;
+  z-index: -500;
 }
 
 #video {
   position: fixed;
-  z-index: -10;
+  z-index: -500;
   width: 100%;
   margin: 0;
   opacity: 90%;
 }
 
-/* container {
-  position: fixed;
-  z-index: 10 !important;
-} */
 .top-nav {
   margin-bottom: 0;
 }
 #title {
+  // position: fixed;
   color: white;
-  font-size: 18px;
-  justify-content: center;
+  font-size: 22px;
   font-weight: 900;
 }
 #video_box {
@@ -28,14 +51,14 @@
   z-index: -10;
   width: 100%;
   margin: 0;
+  z-index: -100;
 }
 
 #video_overlays {
   position: fixed;
   top: 125px;
   left: 80px;
-  width: 500px;
+  width: 800px;
   min-height: 500px;
-  /* background-color: #000; */
-  z-index: 300000;
+  z-index: 5000;
 }
